@@ -1,6 +1,8 @@
 2004-04-26  John Luke  <jluke@cfl.rr.com>
 
 	* *.cs: ILAsmBinding namespace
+	* ILAsmCompilerManager.cs: change it to work like the Java one
+	* Project/CompilationParameters.cs: use /exe and /dll
 
 
 
